--- a/app/scss/_article.scss
+++ b/app/scss/_article.scss
@@ -25,6 +25,13 @@
     &__item {
         border-radius: 0.3125rem;
         overflow: hidden;
+        box-shadow: 0rem 3px 12px rgba(0,0,0,0.15);
+        background-color: $white;
+        transition: all 0.2s ease-in-out;
+
+        &:hover {
+            transform: scale(1.05);
+        }
     }
 
     &__image {
@@ -35,7 +42,6 @@
     }
 
     &__text {
-        background-color: $white;
         padding: 1.875rem 1.875rem 2.5rem 1.875rem;
         color: $grayishBlue;
 
